Fixed autocomplete not fitting 4 full elements

--- a/src/components/Autocomplete/autocomplete.scss
+++ b/src/components/Autocomplete/autocomplete.scss
@@ -31,6 +31,9 @@ $suggestion-border: 1px solid color('grey-lite');
   border-color: color('error');
 }
 
+/**
+ * 1. Value so that it always fits 4 suggestions at a time.
+ */
 .list {
   @include map-declarations($form-fields-defaults, $form-fields-custom);
   position: absolute;
@@ -38,7 +41,7 @@ $suggestion-border: 1px solid color('grey-lite');
   right: 0;
   top: 100%;
   z-index: 2;
-  max-height: 204px;
+  max-height: 216px; /* 1 */
   overflow-y: scroll;
   list-style: none;
   padding: 0;
